# ai-developer-skill-os

./: .agentsignore  .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  add_lang.js  add_lang.py  add_sections.py  api-integration.skill.md  bug-fix.skill.md  fix_seeds.js  generate-tests.cjs  migrate-to-v6.js  migrate.js  migrate.py  migrate_all.cjs  package-lock.json  package.json  patch.js  patch.py  patch2.py  rename.js  scratch_update.cjs  skills.json  temp_fix.js  update_template.js  vitest.config.js
.agents/: 100-edaos-century-master-index.md  54-edaos-productization-blueprint.md  59-edaos-v5-roadmap.md  70-edaos-v7-roadmap.md  88-edaos-v9-master-summary.md  94-edaos-complete-master-index.md  95-edaos-v11-interoperability-roadmap.md  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  EDAOS_ADOPTION_STATUS.md  EDAOS_FOUNDATION_CHARTER.md  README.md  skills.json
.agents/benchmarks/: 69-industry-benchmark-suite.md
.agents/capabilities/: registry.yaml
.agents/certification/: 51-edaos-certification-standard.yml  87-independent-certification-body.yml  93-edaos-v10-constitution-certificate.md  99-edaos-v11-open-standard-certificate.md
.agents/compliance/: 37-compliance-framework.yml  79-community-enterprise-split.yml  84-enterprise-data-governance.yml  92-global-standards-compliance.yml  97-open-governance-protocol.yml
.agents/contracts/: 07-capability-contract.yml  09-rule-contract.yml  (+5 more)
.agents/sdk/python/: pyproject.toml
.execution_demo/: journal.jsonl
.qk-ai-skill-os/: skills.json
_template/: SKILL.md
docs/: CHI_TIET_SKILLS.md  GOVERNANCE.md  HUONG_DAN_SU_DUNG.md  SPEC.md
framework/: KERNEL.md  decision-primitives.md  skill-schema.md
rules-skill/: CHANGELOG.md  LICENSE
templates/: DESIGN.md  bug-report.md  design-report.md  feature-report.md  review-report.md  skill-template.md
tests/: behavior-conformance.test.js  install-script.test.js  registry.test.js  spec-compliance.test.js
tooling/: generate-registry.js  run-aar.js  validate-graph.js  validate-skills.js
(+576 files in other folders)
