[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "edaos-sdk"
version         = "11.0.0"
description     = "EDAOS SDK — Evidence-Driven Autonomous Engineering Standard"
readme          = "README.md"
license         = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords        = [
    "edaos", "ai-governance", "evidence-driven", "autonomous-engineering",
    "policy-engine", "saga", "provenance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "cryptography>=42",
    "structlog>=24",
    "rich>=13",
]

[project.optional-dependencies]
dev  = ["pytest>=8", "pytest-cov", "ruff", "mypy"]
full = ["opentelemetry-sdk>=1.25", "kafka-python>=2", "qdrant-client>=1.9"]

[project.urls]
Homepage      = "https://edaos.org"
Documentation = "https://spec.edaos.org"
Repository    = "https://github.com/edaos-foundation/edaos-sdk-python"
Changelog     = "https://github.com/edaos-foundation/edaos-sdk-python/releases"
Registry      = "https://registry.edaos.org"

[project.scripts]
edaos = "edaos.cli:main"      # edaos verify / edaos certify / edaos status

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=edaos --cov-report=term-missing --cov-fail-under=90"
